@@ -2638,4 +2638,11 @@
   <block id="1c0706b323b25df07171d935dadca63d" category="sidebar">Découvrez Keystone STaaS SLO</block>
   <block id="4996475aff4a957b37439e45da70e7da" category="sidebar">Comprendre la facturation</block>
   <block id="d7343c0d20dd2babfa5f38e0b87a6939" category="sidebar">Facturation pour des configurations de volume spécifiques</block>
+  <block id="0fa78e8d7c7b076da1f9e1d3fa517845" category="doc">Modification de l'abonnement impossible</block>
+  <block id="6c8dd41ea59e163d8fa923e1f93882e6" category="paragraph">Mises à jour du tableau de bord Keystone dans la NetApp Console:</block>
+  <block id="ccaf34b2cf2472652ed113639a7f687c" category="paragraph">L'option permettant de modifier la capacité engagée pour les abonnements Keystone n'est actuellement pas disponible. Cette fonctionnalité sera réintroduite dans une prochaine version.</block>
+  <block id="252561ea020b2dfb8598526a78a88036" category="inline-link-macro">Rôles d'accès Keystone dans la NetApp Console</block>
+  <block id="99a171058669ac189901e0c53c44ed13" category="admonition">Vous devez être affecté au rôle d'administrateur Keystone pour créer et gérer les moniteurs d'alerte. Pour en savoir plus, consultez <block ref="c1ba7ab85116b0653b4bddd0a4c0ce29" category="inline-link-macro-rx"></block>.</block>
+  <block id="53a22728b83fc16fec4e96baf9b85af7" category="admonition">La modification des alertes nécessite le rôle d'administrateur Keystone . Le rôle *Visionneuse Keystone * permet uniquement de consulter les détails des alertes. Pour en savoir plus, consultez <block ref="c1ba7ab85116b0653b4bddd0a4c0ce29" category="inline-link-macro-rx"></block>.</block>
+  <block id="194a29c3464a05de3c32434145c0b5d6" category="section-title">19 janvier 2026</block>
 </blocks>
