@@ -1,0 +1,11 @@
+= Modification de l'abonnement impossible
+:allow-uri-read: 
+
+
+Mises à jour du tableau de bord Keystone dans la NetApp Console:
+
+
+
+=== Modification de l'abonnement impossible
+
+L'option permettant de modifier la capacité engagée pour les abonnements Keystone n'est actuellement pas disponible. Cette fonctionnalité sera réintroduite dans une prochaine version.
